--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,4 +8,17 @@
   --titles: hsl(180, 14%, 20%);
   --primary-txt: hsl(180, 29%, 50%);
   --secondary-txt: hsl(180, 8%, 52%);
+
+  --row-gap: 40px;
+  --logo-size: 48px;
+  --outer-margin: 8vw;
+  --inner-padding: 5vw;
+  --offer-border-radius: 8px;
+  --filter-border-radius: 3px;
+  --h2-font-size: 1.9rem;
+  --h3-font-size: 1.7rem;
+  --span-font-size: 1.5rem;
+  --filter-margin: 10px;
+  --close-btn-size: 30px;
+  --box-shadow: 0 10px 30px -20px var(--primary-txt);
 }
